fix: user auth, add google and refactor
