# docs/swagger.yaml
@@ -46,6 +46,13 @@ definitions:
     - text
     - tr
     type: object
+  domain.EmailPasswordAccount:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+    type: object
   domain.Example:
     properties:
       text:
@@ -63,6 +70,19 @@ definitions:
         type: string
     required:
     - text
+    type: object
+  domain.GoogleAccount:
+    properties:
+      email:
+        type: string
+      emailVerified:
+        type: boolean
+      name:
+        type: string
+      picture:
+        type: string
+      sub:
+        type: string
     type: object
   domain.Mean:
     properties:
@@ -101,8 +121,10 @@ definitions:
     type: object
   domain.User:
     properties:
-      email:
-        type: string
+      emailPasswordAccount:
+        $ref: '#/definitions/domain.EmailPasswordAccount'
+      googleAccount:
+        $ref: '#/definitions/domain.GoogleAccount'
       id:
         type: string
       isAdmin:
@@ -130,6 +152,22 @@ definitions:
         items:
           $ref: '#/definitions/domain.Book'
         type: array
+    type: object
+  google_login.Input:
+    properties:
+      idToken:
+        type: string
+    required:
+    - idToken
+    type: object
+  google_login.Output:
+    properties:
+      accessToken:
+        type: string
+      refreshToken:
+        type: string
+      user:
+        $ref: '#/definitions/domain.User'
     type: object
   login.Input:
     properties:
@@ -236,6 +274,27 @@ info:
   title: Nim2Book api
   version: "1.0"
 paths:
+  /auth/google-login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/google_login.Input'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/google_login.Output'
+      summary: GoogleLogin user
+      tags:
+      - auth
   /auth/login:
     post:
       consumes:
